# value_predictor

./: README.md  data.ipynb  pyproject.toml  requirements.txt
price/: Aluminium.csv  Bitcoin.csv  BrentOil.csv  CBOE.csv  Copper.csv  CrudeOil.csv  DowJones.csv  Gasoline.csv  Gold.csv  HeatingOil.csv  Lead.csv  NASDAQ.csv  NaturalGas.csv  Nickel.csv  Palladium.csv  Platinum.csv  S&P500.csv  Silver.csv  Tin.csv  US30.csv  US500.csv  USDollarIndex.csv  Zinc.csv
src/: app.py  data_analysis.py  flask_api.py  latest.py  main.py  predictor.py  test.py  try.py
src/static/: script.js  style.css
src/templates/: index.html
src/value_predictor.egg-info/: PKG-INFO
tests/: data.csv  index.csv  test_value_predictor.py
